# Apex_Legends_Random_Picker

./: README.md
Project/random_legend_picker/: Cargo.toml
Project/random_legend_picker/src/: interface.ui  lib.rs  main.rs
Project/random_legend_picker/src/Legends/: Legends.json
