[package]
name = "random_legend_picker"
version = "0.1.0"
edition = "2021"
authors = ["RobertoStrikers <robertostrikers@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.3"
rand = "0.8.0"
serde_json = "1.0.74"
serde ={version = "1.0.133", features = ["derive"]}